# DDServo

./: .gitignore  README.md  README.md~
DDFirmware/: CMakeLists.txt  linker.ld  startup.S
DDFirmware/CMake/: CMakeSetCompilerFlags.cmake  CMakeToolchainFile.cmake
DDFirmware/Firmware/: Release_Notes.html
DDFirmware/Firmware/CMSIS/: CMakeLists.txt
DDFirmware/Firmware/CMSIS/CM3/CoreSupport/: core_cm3.h
DDFirmware/Firmware/CMSIS/CM3/DeviceSupport/ST/STM32F10x/: system_stm32f10x.c
DDFirmware/Source/: common.h  communicationProtocol.c  communicationProtocol.h  eeprom0.c  eeprom1.c  eeprom1.h  fixpoint.h  logging.c  main.c  measurement.c  measurement.h  measurementLookup.c  measurementLookup.h  memory.c  motor.c  motor.h  observer.c  observer.h  signalLookup.h  task.c  task.h  trajectoryGeneration.h
DDFlashTool/: DDFlashTool.pyw  DDFlashTool.ui
Documents/: Protocol.ods  Temperature Sensor.ods
Firmware/CMake/: CMakePrintCompilerFlags.cmake
Firmware/Firmware/CMSIS/CM3/DeviceSupport/ST/STM32F10x/: stm32f10x.h
Firmware/Firmware/STM32F10xDriver/: CMakeLists.txt
Firmware/Source/: CMakeLists.txt  common.c  communication.c  communication.h  configuration.h  control.c  control.h  eeprom0.h  logging.h  memory.h  signal.c  signal.h  signalLookup.c  trajectoryGeneration.c
Lookup Generator/: DDLookupGenerator.py
Parts/: DD-28 Magnet Mount.stl  DD-64 Magnet Mount.stl
Schematics/DD-28/: Main Board.brd  Main Board.sch  Sensor Board.brd  Sensor Board.sch
Schematics/DD-64/: Main Board.brd  Main Board.sch
